[gd_scene load_steps=2 format=3 uid="uid://gvkx3bnathwr"]

[ext_resource type="Script" path="res://UI/Buttons/UpgradeChoiceUI.gd" id="1_5bd1h"]

[node name="UpgradeChoiceUI" type="GridContainer"]
editor_description = "A list item for an UpgradesList"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -183.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
script = ExtResource("1_5bd1h")
shouldShowDebugInfo = null

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 10

[node name="CostStatLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "COST"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CostAmountLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpgradeButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "UPGRADE"

[connection signal="pressed" from="UpgradeButton" to="." method="onUpgradeButton_pressed"]
